Tooltips function correctly, assume ignoring  z-index incompetence

--- a/frontend/src/styles/boardSelect.css
+++ b/frontend/src/styles/boardSelect.css
@@ -72,6 +72,10 @@
     font-size: 30px;
     border-bottom: 2px solid white;
 }
+#R_select a{
+    position: relative;
+    z-index: 0;
+}
 #R_select .boardCard {
     transition: all 0.25s ease-out;
     position: relative;
@@ -86,6 +90,7 @@
     border: 2px outset #f77;
     box-shadow: 3px 4px 0px #0003;
     opacity: 0;
+    z-index: 10;
 }
 /*
 #R_select a:nth-child(1) .boardCard { animation-delay: 0s;}
@@ -123,13 +128,15 @@
     outline-offset: -4px;
 }
 #R_select .boardCard h3 {
+    position: relative;
     font-weight: 600;
     white-space: nowrap;
-    z-index: -1000;
+    overflow: clip;
+    text-overflow: ellipsis;
 }
 #R_select .boardCard h3 span {
     position: relative;
-    right: 0px;
+    width: fit-content;
     font-family: Barlow;
 }
 #R_select .cardAttr {
@@ -138,25 +145,32 @@
     right: 0px;
     bottom: 0px;
     padding-right: 10px;
+    width: 100%;
+}
+#R_select .cardAttr .tooltip {
+    position: relative;
+    display: inline;
+    margin: 0px 4px;
 }
 #R_select .cardAttr object {
     height: 30px;
     width: 30px;
 }
 #R_select .cardAttr .desc {
+    transition: all 0.5s;
     background-color: #333;
     font-weight: 600;
     position: absolute;
     opacity: 0;
-    
     width: 120px;
-    left: -40px;
-    top: 40px;
+    left: -45px;
+    top: 20px;
     border-radius: 10px;
     padding: 10px;
     text-align: center;
+    font-size: 12px;
 }
-#R_select .cardAttr:hover .desc {
+#R_select .cardAttr .tooltip:hover .desc {
     opacity: 1;
     transform: translate(0px, 0px);
 }
